from statemachine import StateMachine, State

class FirmwareUpdateStateMachine(StateMachine):
    """State machine for managing firmware update process."""

    # Define states
    authenticating = State("Authenticating", initial=True)
    configuring = State("Configuring")
    api_authenticating = State("API Authenticating")
    serving = State("Serving")
    
    # Define transitions based on your PlantUML diagram
    auth_failed = authenticating.to(configuring)
    auth_success = authenticating.to(api_authenticating)
    config_success = configuring.to(authenticating)
    config_failed = configuring.to(configuring)  # Stay in configuring on write error
    api_auth_failed = api_authenticating.to(configuring)
    api_auth_success = api_authenticating.to(serving)
    
    def on_enter_authenticating(self):
        """Connect to network with saved credentials"""
        print("Entering Authenticating state")
        print("Attempting to connect to network with saved credentials...")
        # Add authentication logic here
        # This would typically check saved network credentials
        # For demo purposes, we'll simulate the logic
        
    def on_enter_configuring(self):
        """Start Access Point and Web Server for configuration"""
        print("Entering Configuring state")
        print("Starting Access Point and Web Server for configuration...")
        print("Waiting for user to configure network and workshop credentials...")
        # Add configuration logic here
        # This would start AP mode and web server
        
    def on_enter_api_authenticating(self):
        """Get session token from API with saved workshop credentials"""
        print("Entering API Authenticating state")
        print("Getting session token from API with saved workshop credentials...")
        # Add API authentication logic here
        # This would authenticate with the workshop API
        
    def on_enter_serving(self):
        """Main serving state - poll API and publish firmware updates"""
        print("Entering Serving state")
        print("Starting main service loop...")
        print("- Periodically polling API for new firmware")
        print("- Publishing new firmware to MQTT broker")
        print("- Checking if firmware has been applied successfully")
        # Add serving logic here
